<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AsyncTaskExample2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="num_followers">Followers: </string>
    <string name="num_following">Following: </string>
    <string name="num_likes">Likes: </string>
    <string name="submit">Submit</string>
    <string name="enter_low">Enter low</string>
    <string name="enter_high">Enter high</string>
</resources>
