<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/input"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/low"
            android:hint="@string/enter_low"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/high"
            android:hint="@string/enter_high"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/num_followers"
        android:textSize="18sp"
        android:layout_below="@+id/input"
        android:layout_marginTop="16dp"
        android:text="@string/num_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/num_following"
        android:layout_below="@+id/num_followers"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/num_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/num_likes"
        android:layout_below="@+id/num_following"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/num_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_below="@+id/num_likes"
        android:layout_width="wrap_content"
        android:layout_height="48dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/progress_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
